Fri Dec 17 17:53:18 1999  Tim Janik  <timj@gtk.org>

	* pluged bad memory leaks:
	* bsemult.c (bse_mult_calc_chunk):
	* bseadder.c (bse_adder_calc_chunk): use chunk_new_orphan() not
	chunk_new_foreign(), since we allocated the hunk and don't
	provide it from static data.

Fri Dec 17 17:26:12 1999  Tim Janik  <timj@gtk.org>

	* greeting.c: (test file anyways)
	* bsegenosc.c: 
	* bsefirfilter.c: adapted bse_param_spec* () calls to supply nick names.

Fri Dec 17 10:43:54 1999  Tim Janik  <timj@gtk.org>

	* bsemult.[hc]: added multiplier source to fold signals.

	* bseadder.[hc]: added adder source to sum up signals.

Thu Dec 16 10:15:15 1999  Tim Janik  <timj@gtk.org>

	* bsegenosc.c (bse_gen_osc_class_init): group frequency parameters.

Thu Dec 16 08:08:35 1999  Tim Janik  <timj@gtk.org>

	* bsefirfilter.c (bse_fir_filter_class_init): group cut off parameters.

	* bsegenosc.[hc]: removed amplitude modulation input channel.

Sun Dec 12 04:55:13 1999  Tim Janik  <timj@gtk.org>

	* bsegenosc.c: radio parameter fixups.

	* bseloopback.[hc]: channel history related recoding. this is
	still a somewhat dubious module, we can effectively only delay
	stuff by some multitude of the bse track length,
	i.e. z^-(n*BSE_TRACK_LENGTH), which provides questionable benefits.

Thu Dec  9 03:56:24 1999  Tim Janik  <timj@gtk.org>

	* bsegenosc.c (bse_gen_osc_calc_chunk): handle amplitude modulation.

	* bseloopback.[hc]: simlpe plugin to reroute it's input to the output
	(no, no extra buffer copy is necessary).

	* removed testos.c (finally).

Sun Dec  5 02:52:29 1999  Tim Janik  <timj@gtk.org>

	* bsecapture.[hc]: adapted stuff to the new BsePcmDevice and BseHeart
	core objects.

Tue Nov 23 00:16:57 1999  Tim Janik  <timj@gtk.org>

	* bsefirfilter.[hc]: some (minor) parameter clean ups.

Sat Nov 20 23:24:25 1999  Tim Janik  <timj@gtk.org>

	* bsefirfilter.[hc]: started out on an FIR (finite impulse response)
	filter. it supports variable degree setting, cut off frequency,