@@ -22,10 +22,23 @@
 #include <bse/bsemixer.h>
 
 
+/* --- parameters --- */
+enum
+{
+  PARAM_0,
+  PARAM_SUBTRACT,
+};
+
+
 /* --- prototypes --- */
 static void	 bse_adder_init			(BseAdder	*adder);
 static void	 bse_adder_class_init		(BseAdderClass	*class);
-static void	 bse_adder_class_destroy		(BseAdderClass	*class);
+static void	 bse_adder_class_destroy	(BseAdderClass	*class);
+static void      bse_adder_set_param            (BseAdder	*adder,
+						 BseParam       *param);
+static void      bse_adder_get_param            (BseAdder	*adder,
+						 BseParam       *param);
+static BseIcon*	 bse_adder_do_get_icon		(BseObject     	*object);
 static void	 bse_adder_do_shutdown		(BseObject     	*object);
 static void      bse_adder_prepare               (BseSource      *source,
 						 BseIndex        index);
@@ -56,20 +69,37 @@ static const BseTypeInfo type_info_adder = {
 static void
 bse_adder_class_init (BseAdderClass *class)
 {
+#include "./icons/sub.c"
+  BsePixdata sub_pix_data = { SUB_IMAGE_BYTES_PER_PIXEL | BSE_PIXDATA_1BYTE_RLE,
+			      SUB_IMAGE_WIDTH, SUB_IMAGE_HEIGHT,
+			      SUB_IMAGE_RLE_PIXEL_DATA, };
   BseObjectClass *object_class;
   BseSourceClass *source_class;
   guint ichannel_id, ochannel_id;
-  
+    
   parent_class = bse_type_class_peek (BSE_TYPE_SOURCE);
   object_class = BSE_OBJECT_CLASS (class);
   source_class = BSE_SOURCE_CLASS (class);
   
+  object_class->set_param = (BseObjectSetParamFunc) bse_adder_set_param;
+  object_class->get_param = (BseObjectGetParamFunc) bse_adder_get_param;
+  object_class->get_icon = bse_adder_do_get_icon;
   object_class->shutdown = bse_adder_do_shutdown;
   
   source_class->prepare = bse_adder_prepare;
   source_class->calc_chunk = bse_adder_calc_chunk;
   source_class->reset = bse_adder_reset;
+
+  class->sub_icon = bse_icon_from_pixdata (&sub_pix_data);
   
+  bse_object_class_add_param (object_class, "Features",
+			      PARAM_SUBTRACT,
+			      bse_param_spec_bool ("subtract", "Subtract instead",
+						   "Use subtraction to combine sample"
+						   "values (instead of addition)",
+						   TRUE,
+						   BSE_PARAM_DEFAULT));
+
   ichannel_id = bse_source_class_add_ichannel (source_class, "mono_in1", "Mono Input 1", 1, 1);
   g_assert (ichannel_id == BSE_ADDER_ICHANNEL_MONO1);
   ichannel_id = bse_source_class_add_ichannel (source_class, "mono_in2", "Mono Input 2", 1, 1);
@@ -85,12 +115,26 @@ bse_adder_class_init (BseAdderClass *class)
 static void
 bse_adder_class_destroy (BseAdderClass *class)
 {
+  bse_icon_unref (class->sub_icon);
+  class->sub_icon = NULL;
 }
 
 static void
 bse_adder_init (BseAdder *adder)
 {
   adder->mix_buffer = NULL;
+  adder->subtract = FALSE;
+}
+
+static BseIcon*
+bse_adder_do_get_icon (BseObject *object)
+{
+  BseAdder *adder = BSE_ADDER (object);
+
+  if (adder->subtract)
+    return BSE_ADDER_GET_CLASS (adder)->sub_icon;
+  else /* chain parent class' handler */
+    return BSE_OBJECT_CLASS (parent_class)->get_icon (object);
 }
 
 static void
@@ -102,6 +146,45 @@ bse_adder_do_shutdown (BseObject *object)
   
   /* chain parent class' shutdown handler */
   BSE_OBJECT_CLASS (parent_class)->shutdown (object);
+}
+
+static void
+bse_adder_set_param (BseAdder *adder,
+		     BseParam *param)
+{
+  switch (param->pspec->any.param_id)
+    {
+    case PARAM_SUBTRACT:
+      adder->subtract = param->value.v_bool;
+      bse_object_notify_icon_changed (BSE_OBJECT (adder));
+      break;
+    default:
+      g_warning ("%s(\"%s\"): invalid attempt to set parameter \"%s\" of type `%s'",
+		 BSE_OBJECT_TYPE_NAME (adder),
+		 BSE_OBJECT_NAME (adder),
+		 param->pspec->any.name,
+		 bse_type_name (param->pspec->type));
+      break;
+    }
+}
+
+static void
+bse_adder_get_param (BseAdder *adder,
+		     BseParam *param)
+{
+  switch (param->pspec->any.param_id)
+    {
+    case PARAM_SUBTRACT:
+      param->value.v_bool = adder->subtract;
+      break;
+    default:
+      g_warning ("%s(\"%s\"): invalid attempt to get parameter \"%s\" of type `%s'",
+		 BSE_OBJECT_TYPE_NAME (adder),
+		 BSE_OBJECT_NAME (adder),
+		 param->pspec->any.name,
+		 bse_type_name (param->pspec->type));
+      break;
+    }
 }
 
 static void
@@ -152,25 +235,43 @@ bse_adder_calc_chunk (BseSource *source,
 	}
     }
 
-
-  for (c = c + 1; c <= BSE_ADDER_ICHANNEL_MONO4; c++)
-    {
-      BseSourceInput *input = bse_source_get_input (source, c);
-
-      if (input)
-	{
-	  BseChunk *chunk = bse_source_ref_chunk (input->osource, input->ochannel_id, source->index);
-	  BseSampleValue *s = bse_chunk_complete_hunk (chunk);
-
-	  mv = adder->mix_buffer;
-	  do
-	    *(mv++) += *(s++);
-	  while (mv < bound);
-
-	  bse_chunk_unref (chunk);
-	}
-    }
-
+  if (adder->subtract)
+    for (c = c + 1; c <= BSE_ADDER_ICHANNEL_MONO4; c++)
+      {
+	BseSourceInput *input = bse_source_get_input (source, c);
+	
+	if (input)
+	  {
+	    BseChunk *chunk = bse_source_ref_chunk (input->osource, input->ochannel_id, source->index);
+	    BseSampleValue *s = bse_chunk_complete_hunk (chunk);
+	    
+	    mv = adder->mix_buffer;
+	    do
+	      *(mv++) -= *(s++);
+	    while (mv < bound);
+	    
+	    bse_chunk_unref (chunk);
+	  }
+      }
+  else
+    for (c = c + 1; c <= BSE_ADDER_ICHANNEL_MONO4; c++)
+      {
+	BseSourceInput *input = bse_source_get_input (source, c);
+	
+	if (input)
+	  {
+	    BseChunk *chunk = bse_source_ref_chunk (input->osource, input->ochannel_id, source->index);
+	    BseSampleValue *s = bse_chunk_complete_hunk (chunk);
+	    
+	    mv = adder->mix_buffer;
+	    do
+	      *(mv++) += *(s++);
+	    while (mv < bound);
+	    
+	    bse_chunk_unref (chunk);
+	  }
+      }
+    
   hunk = bse_hunk_alloc (1);
   v = hunk;
   mv = adder->mix_buffer;
