@@ -7,6 +7,7 @@ icon_list += pipe.c
 icon_list += prod.c
 icon_list += sine.c
 icon_list += speaker.c
+icon_list += sub.c
 icon_list += sum.c
 icon_list += amp.xcf
 icon_list += mic.xcf
@@ -15,5 +16,6 @@ icon_list += pipe.xcf
 icon_list += prod.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
+icon_list += sub.xcf
 icon_list += sum.xcf
 ## Generated data ends here
