@@ -1,0 +1,189 @@
+/* GIMP RGBA C-Source image dump 1-byte-run-length-encoded (sub.c) */
+
+#define SUB_IMAGE_WIDTH (64)
+#define SUB_IMAGE_HEIGHT (64)
+#define SUB_IMAGE_BYTES_PER_PIXEL (4) /* 3:RGB, 4:RGBA */
+#define SUB_IMAGE_RLE_PIXEL_DATA ((guint8*) SUB_IMAGE_rle_pixel_data)
+#define SUB_IMAGE_RUN_LENGTH_DECODE(image_buf, rle_data, size, bpp) do \
+{ guint __bpp; guint8 *__ip; const guint8 *__il, *__rd; \
+  __bpp = (bpp); __ip = (image_buf); __il = __ip + (size) * __bpp; \
+  __rd = (rle_data); if (__bpp > 3) { /* RGBA */ \
+    while (__ip < __il) { guint __l = *(__rd++); \
+      if (__l & 128) { __l = __l - 128; \
+        do { memcpy (__ip, __rd, 4); __ip += 4; } while (--__l); __rd += 4; \
+      } else { __l *= 4; memcpy (__ip, __rd, __l); \
+               __ip += __l; __rd += __l; } } \
+  } else { /* RGB */ \
+    while (__ip < __il) { guint __l = *(__rd++); \
+      if (__l & 128) { __l = __l - 128; \
+        do { memcpy (__ip, __rd, 3); __ip += 3; } while (--__l); __rd += 3; \
+      } else { __l *= 3; memcpy (__ip, __rd, __l); \
+               __ip += __l; __rd += __l; } } \
+  } } while (0)
+static const guint8 SUB_IMAGE_rle_pixel_data[4281] =
+("\377\0\0\0\0\306\0\0\0\0""1h\34\34\377k\40\40\377m##\377o''\377r**\377t.."
+ "\377v11\377y55\377{88\377}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211"
+ "MM\377\213QQ\377\215TT\377\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377"
+ "\233ii\377\235ll\377\240pp\377\242ss\377\244ww\377\247zz\377\251~~\377\253"
+ "\201\201\377\256\205\205\377\260\210\210\377\262\214\214\377\265\217\217\377"
+ "\267\223\223\377\271\226\226\377\274\232\232\377\276\235\235\377\300\241\241"
+ "\377\302\244\244\377\305\250\250\377\307\253\253\377\311\256\256\377\314\262"
+ "\262\377\316\265\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327"
+ "\303\303\377\217\0\0\0\0""2h\34\34\377k\40\40\377m##\377o''\377r**\377t.."
+ "\377v11\377y55\377{88\377}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211"
+ "MM\377\213QQ\377\215TT\377\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377"
+ "\233ii\377\235ll\377\240pp\377\242ss\377\244ww\377\247zz\377\251~~\377\253"
+ "\201\201\377\256\205\205\377\260\210\210\377\262\214\214\377\265\217\217\377"
+ "\267\223\223\377\271\226\226\377\274\232\232\377\276\235\235\377\300\241\241"
+ "\377\302\244\244\377\305\250\250\377\307\253\253\377\311\256\256\377\314\262"
+ "\262\377\316\265\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327"
+ "\303\303\377\332\307\307\377\216\0\0\0\0""2h\34\34\377k\40\40\377m##\377o"
+ "''\377r**\377t..\377v11\377y55\377{88\377}<<\377\177??\377\202CC\377\204F"
+ "F\377\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377\222[[\377\224^^\377"
+ "\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377\242ss\377\244ww\377\247"
+ "zz\377\251~~\377\253\201\201\377\256\205\205\377\260\210\210\377\262\214\214"
+ "\377\265\217\217\377\267\223\223\377\271\226\226\377\274\232\232\377\276\235"
+ "\235\377\300\241\241\377\302\244\244\377\305\250\250\377\307\253\253\377\311"
+ "\256\256\377\314\262\262\377\316\265\265\377\320\271\271\377\323\274\274\377"
+ "\325\300\300\377\327\303\303\377\332\307\307\377\216\0\0\0\0""2h\34\34\377"
+ "k\40\40\377m##\377o''\377r**\377t..\377v11\377y55\377{88\377}<<\377\177??"
+ "\377\202CC\377\204FF\377\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377"
+ "\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377\242"
+ "ss\377\244ww\377\247zz\377\251~~\377\253\201\201\377\256\205\205\377\260\210"
+ "\210\377\262\214\214\377\265\217\217\377\267\223\223\377\271\226\226\377\274"
+ "\232\232\377\276\235\235\377\300\241\241\377\302\244\244\377\305\250\250\377"
+ "\307\253\253\377\311\256\256\377\314\262\262\377\316\265\265\377\320\271\271"
+ "\377\323\274\274\377\325\300\300\377\327\303\303\377\332\307\307\377\217\0"
+ "\0\0\0\7k\40\40\377m##\377o''\377r**\377t..\377v11\377y55\377\237\0\0\0\0"
+ "\13\302\244\244\377\305\250\250\377\307\253\253\377\311\256\256\377\314\262"
+ "\262\377\316\265\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327"
+ "\303\303\377\332\307\307\377\220\0\0\0\0\7m##\377o''\377r**\377t..\377v11"
+ "\377y55\377{88\377\241\0\0\0\0\11\311\256\256\377\314\262\262\377\316\265"
+ "\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327\303\303\377\332"
+ "\307\307\377\334\312\312\377\220\0\0\0\0\7o''\377r**\377t..\377v11\377y55"
+ "\377{88\377}<<\377\243\0\0\0\0\6\320\271\271\377\323\274\274\377\325\300\300"
+ "\377\327\303\303\377\332\307\307\377\334\312\312\377\220\0\0\0\0\10o''\377"
+ "r**\377t..\377v11\377y55\377{88\377}<<\377\177??\377\243\0\0\0\0\6\323\274"
+ "\274\377\325\300\300\377\327\303\303\377\332\307\307\377\334\312\312\377\336"
+ "\316\316\377\220\0\0\0\0\10r**\377t..\377v11\377y55\377{88\377}<<\377\177"
+ "??\377\202CC\377\244\0\0\0\0\4\327\303\303\377\332\307\307\377\334\312\312"
+ "\377\336\316\316\377\221\0\0\0\0\7t..\377v11\377y55\377{88\377}<<\377\177"
+ "??\377\202CC\377\244\0\0\0\0\4\327\303\303\377\332\307\307\377\334\312\312"
+ "\377\336\316\316\377\222\0\0\0\0\7v11\377y55\377{88\377}<<\377\177??\377\202"
+ "CC\377\204FF\377\245\0\0\0\0\3\334\312\312\377\336\316\316\377\340\321\321"
+ "\377\221\0\0\0\0\7v11\377y55\377{88\377}<<\377\177??\377\202CC\377\204FF\377"
+ "\245\0\0\0\0\3\334\312\312\377\336\316\316\377\340\321\321\377\222\0\0\0\0"
+ "\7y55\377{88\377}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\245\0\0\0"
+ "\0\2\336\316\316\377\340\321\321\377\223\0\0\0\0\7{88\377}<<\377\177??\377"
+ "\202CC\377\204FF\377\206JJ\377\211MM\377\244\0\0\0\0\3\336\316\316\377\340"
+ "\321\321\377\343\325\325\377\222\0\0\0\0\7{88\377}<<\377\177??\377\202CC\377"
+ "\204FF\377\206JJ\377\211MM\377\245\0\0\0\0\2\340\321\321\377\343\325\325\377"
+ "\223\0\0\0\0\10}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\213"
+ "QQ\377\215TT\377\271\0\0\0\0\7\177??\377\202CC\377\204FF\377\206JJ\377\211"
+ "MM\377\213QQ\377\215TT\377\271\0\0\0\0\10\177??\377\202CC\377\204FF\377\206"
+ "JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377\271\0\0\0\0\10\202CC\377\204"
+ "FF\377\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377\222[[\377\271\0\0"
+ "\0\0\10\204FF\377\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377\222[["
+ "\377|cc\360\271\0\0\0\0\7\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377"
+ "\222[[\377\224^^\377\272\0\0\0\0\7\211MM\377\213QQ\377\215TT\377\220XX\377"
+ "\222[[\377\224^^\377\227bb\377\272\0\0\0\0\7\213QQ\377\215TT\377\220XX\377"
+ "\222[[\377\224^^\377\227bb\377\231ee\377\271\0\0\0\0\10\213QQ\377\215TT\377"
+ "\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233mm\377\271\0\0\0\0\7"
+ "\215TT\377\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\272"
+ "\0\0\0\0\7\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\235"
+ "ll\377\271\0\0\0\0\10\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233"
+ "ii\377\235ll\377\240pp\377\205\0\0\0\0\30\345\302\312\377\341\275\305\377"
+ "\335\267\300\377\331\262\272\377\325\255\265\377\321\247\260\377\316\241\252"
+ "\377\312\234\245\377\306\226\237\377\302\221\232\377\276\214\225\377\272\206"
+ "\217\377\267\200\212\377\263{\205\377\257v\177\377\253pz\377\247jt\377\243"
+ "eo\377\237_j\377\234Zd\377\230T_\377\224OZ\377\220JT\377\214DO\377\234\0\0"
+ "\0\0\7\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377"
+ "\205\0\0\0\0\30\345\302\312\377\341\275\305\377\335\267\300\377\331\262\272"
+ "\377\325\255\265\377\321\247\260\377\316\241\252\377\312\234\245\377\306\226"
+ "\237\377\302\221\232\377\276\214\225\377\272\206\217\377\267\200\212\377\263"
+ "{\205\377\257v\177\377\253pz\377\247jt\377\243eo\377\237_j\377\234Zd\377\230"
+ "T_\377\224OZ\377\220JT\377\214DO\377\235\0\0\0\0\7\224^^\377\227bb\377\231"
+ "ee\377\233ii\377\235ll\377\240pp\377\242ss\377\204\0\0\0\0\30\345\302\312"
+ "\377\341\275\305\377\335\267\300\377\331\262\272\377\325\255\265\377\321\247"
+ "\260\377\316\241\252\377\312\234\245\377\306\226\237\377\302\221\232\377\276"
+ "\214\225\377\272\206\217\377\267\200\212\377\263{\205\377\257v\177\377\253"
+ "pz\377\247jt\377\243eo\377\237_j\377\234Zd\377\230T_\377\224OZ\377\220JT\377"
+ "\214DO\377\236\0\0\0\0\6\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377"
+ "\242ss\377\204\0\0\0\0\30\345\302\312\377\341\275\305\377\335\267\300\377"
+ "\331\262\272\377\325\255\265\377\321\247\260\377\316\241\252\377\312\234\245"
+ "\377\306\226\237\377\302\221\232\377\276\214\225\377\272\206\217\377\267\200"
+ "\212\377\263{\205\377\257v\177\377\253pz\377\247jt\377\243eo\377\237_j\377"
+ "\234Zd\377\230T_\377\224OZ\377\220JT\377\214DO\377\236\0\0\0\0\5\227bb\377"
+ "\231ee\377\233ii\377\235ll\377\240pp\377\205\0\0\0\0\30\345\302\312\377\341"
+ "\275\305\377\335\267\300\377\331\262\272\377\325\255\265\377\321\247\260\377"
+ "\316\241\252\377\312\234\245\377\306\226\237\377\302\221\232\377\276\214\225"
+ "\377\272\206\217\377\267\200\212\377\263{\205\377\257v\177\377\253pz\377\247"
+ "jt\377\243eo\377\237_j\377\234Zd\377\230T_\377\224OZ\377\220JT\377\214DO\377"
+ "\235\0\0\0\0\6\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377"
+ "\272\0\0\0\0\5\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\272\0\0\0"
+ "\0\5\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\272\0\0\0\0\5\220X"
+ "X\377\222[[\377\224^^\377\227bb\377\231ee\377\273\0\0\0\0\5\220XX\377\222"
+ "[[\377\224^^\377\227bb\377\215uu\360\272\0\0\0\0\5\215TT\377\220XX\377\222"
+ "[[\377\224^^\377\227bb\377\272\0\0\0\0\5\213QQ\377\215TT\377\220XX\377\222"
+ "[[\377\223``\377\273\0\0\0\0\4\213QQ\377\215TT\377\220XX\377\222[[\377\272"
+ "\0\0\0\0\5\206JJ\377\211MM\377\213QQ\377\215TT\377\220XX\377\273\0\0\0\0\4"
+ "\206JJ\377\211MM\377\213QQ\377\215TT\377\273\0\0\0\0\5\204FF\377\206JJ\377"
+ "\211MM\377\213QQ\377\215TT\377\272\0\0\0\0\5\202CC\377\204FF\377\206JJ\377"
+ "\211MM\377\213QQ\377\272\0\0\0\0\5\177??\377\202CC\377\204FF\377\206JJ\377"
+ "\211MM\377\244\0\0\0\0\3\336\316\316\377\340\321\321\377\343\325\325\377\223"
+ "\0\0\0\0\6}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\244\0"
+ "\0\0\0\2\336\316\316\377\340\321\321\377\224\0\0\0\0\5}<<\377\177??\377\202"
+ "CC\377\204FF\377\206JJ\377\244\0\0\0\0\3\334\312\312\377\336\316\316\377\340"
+ "\321\321\377\223\0\0\0\0\5{88\377}<<\377\177??\377\202CC\377\204FF\377\245"
+ "\0\0\0\0\3\334\312\312\377\336\316\316\377\340\321\321\377\222\0\0\0\0\5y"
+ "55\377{88\377}<<\377\177??\377\202CC\377\245\0\0\0\0\4\332\307\307\377\334"
+ "\312\312\377\336\316\316\377\340\321\321\377\221\0\0\0\0\5v11\377y55\377{"
+ "88\377}<<\377\177??\377\245\0\0\0\0\4\327\303\303\377\332\307\307\377\334"
+ "\312\312\377\336\316\316\377\222\0\0\0\0\4v11\377y55\377{88\377}<<\377\245"
+ "\0\0\0\0\5\325\300\300\377\327\303\303\377\332\307\307\377\334\312\312\377"
+ "\336\316\316\377\220\0\0\0\0\5r**\377t..\377v11\377y55\377{88\377\244\0\0"
+ "\0\0\6\320\271\271\377\323\274\274\377\325\300\300\377\327\303\303\377\332"
+ "\307\307\377\334\312\312\377\221\0\0\0\0\5r**\377t..\377v11\377y55\377{88"
+ "\377\242\0\0\0\0\10\314\262\262\377\316\265\265\377\320\271\271\377\323\274"
+ "\274\377\325\300\300\377\327\303\303\377\332\307\307\377\334\312\312\377\220"
+ "\0\0\0\0\5o''\377r**\377t..\377v11\377y55\377\240\0\0\0\0\13\305\250\250\377"
+ "\307\253\253\377\311\256\256\377\314\262\262\377\316\265\265\377\320\271\271"
+ "\377\323\274\274\377\325\300\300\377\327\303\303\377\332\307\307\377\334\312"
+ "\312\377\217\0\0\0\0\5m##\377o''\377r**\377t..\377v11\377\235\0\0\0\0\16\274"
+ "\232\232\377\276\235\235\377\300\241\241\377\302\244\244\377\305\250\250\377"
+ "\307\253\253\377\311\256\256\377\314\262\262\377\316\265\265\377\320\271\271"
+ "\377\323\274\274\377\325\300\300\377\327\303\303\377\332\307\307\377\217\0"
+ "\0\0\0""1k\40\40\377m##\377o''\377r**\377t..\377v11\377y55\377{88\377}<<\377"
+ "\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\213QQ\377\215TT\377\220"
+ "XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\240pp\377"
+ "\242ss\377\244ww\377\247zz\377\251~~\377\253\201\201\377\256\205\205\377\260"
+ "\210\210\377\262\214\214\377\265\217\217\377\267\223\223\377\271\226\226\377"
+ "\274\232\232\377\276\235\235\377\300\241\241\377\302\244\244\377\305\250\250"
+ "\377\307\253\253\377\311\256\256\377\314\262\262\377\316\265\265\377\320\271"
+ "\271\377\323\274\274\377\325\300\300\377\327\303\303\377\332\307\307\377\217"
+ "\0\0\0\0""1k\40\40\377m##\377o''\377r**\377t..\377v11\377y55\377{88\377}<"
+ "<\377\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\213QQ\377\215TT\377"
+ "\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377\235ll\377\240"
+ "pp\377\242ss\377\244ww\377\247zz\377\251~~\377\253\201\201\377\256\205\205"
+ "\377\260\210\210\377\262\214\214\377\265\217\217\377\267\223\223\377\271\226"
+ "\226\377\274\232\232\377\276\235\235\377\300\241\241\377\302\244\244\377\305"
+ "\250\250\377\307\253\253\377\311\256\256\377\314\262\262\377\316\265\265\377"
+ "\320\271\271\377\323\274\274\377\325\300\300\377\327\303\303\377\332\307\307"
+ "\377\216\0\0\0\0""1h\34\34\377k\40\40\377m##\377o''\377r**\377t..\377v11\377"
+ "y55\377{88\377}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\213"
+ "QQ\377\215TT\377\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377"
+ "\235ll\377\240pp\377\242ss\377\244ww\377\247zz\377\251~~\377\253\201\201\377"
+ "\256\205\205\377\260\210\210\377\262\214\214\377\265\217\217\377\267\223\223"
+ "\377\271\226\226\377\274\232\232\377\276\235\235\377\300\241\241\377\302\244"
+ "\244\377\305\250\250\377\307\253\253\377\311\256\256\377\314\262\262\377\316"
+ "\265\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327\303\303\377"
+ "\217\0\0\0\0""1h\34\34\377k\40\40\377m##\377o''\377r**\377t..\377v11\377y"
+ "55\377{88\377}<<\377\177??\377\202CC\377\204FF\377\206JJ\377\211MM\377\213"
+ "QQ\377\215TT\377\220XX\377\222[[\377\224^^\377\227bb\377\231ee\377\233ii\377"
+ "\235ll\377\240pp\377\242ss\377\244ww\377\247zz\377\251~~\377\253\201\201\377"
+ "\256\205\205\377\260\210\210\377\262\214\214\377\265\217\217\377\267\223\223"
+ "\377\271\226\226\377\274\232\232\377\276\235\235\377\300\241\241\377\302\244"
+ "\244\377\305\250\250\377\307\253\253\377\311\256\256\377\314\262\262\377\316"
+ "\265\265\377\320\271\271\377\323\274\274\377\325\300\300\377\327\303\303\377"
+ "\377\0\0\0\0\313\0\0\0\0");
+
